--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./monn.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Moon</title>
   </head>
 
   <body>
-    <canvas id="bg">
-    </canvas>
+    <canvas id="bg"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 
